Invalidate row/section for backgrounds when cell's geometry changes

https://codereview.chromium.org/2786463004/ caused the regression.
Now we paint cell's container backgrounds as display item of row/section
instead of cell, so when cell's geometry changes we need to invalidate
the container's backgrounds.

BUG=713050
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2851553002
Cr-Commit-Position: refs/heads/master@{#468056}

Former-commit-id: 91f1e343eb3fcc6694c740548e2928519b0350f3